chore: removed some redundant code and added command line run on main